istio-sample-dig/gateway/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
  ports:
    - name: http-custom
      port: 8088
      targetPort: 8088
