istio-sample-dig/gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-study
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8088
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-gateway
  namespace: istio-study
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: /details
        - uri:
            exact: /health
      route:
        - destination:
#            host: details
            host: details.default.svc.cluster.local
            port:
              number: 9080
